--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@ Author URL: http://w3layouts.com
 License: Creative Commons Attribution 3.0 Unported
 License URL: http://creativecommons.org/licenses/by/3.0/
 -->
+
 <!DOCTYPE html>
 <html lang="en" ng-app="app">
 <head>
-<title>Gusto a Personal Websites Category Flat Bootstrap Responsive Website Template | Home :: w3layouts</title>
-<!-- custom-theme -->
+<title>Ho Thai Quyen</title>
+<!-- custom-theme hihi -->
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="keywords" content="Gusto Responsive web template, Bootstrap Web Templates, Flat Web Templates, Android Compatible web template, 
