push code lan cuoi

--- a/index.html
+++ b/index.html
@@ -24,27 +24,27 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <body ng-controller="appCtrl">
     <div id="single">
         <div data-target="about" id="about">
-			<h3 class="w3l-head aos-init aos-animate" data-aos="zoom-in"><span class="title-head">A</span>bout me</h3>
-			<div class="scrollbar agileits-about-scroll">
+			<h3 class="w3l-head"><span class="title-head">A</span>bout me</h3>
+			<div class="conten">
           	<!-- /education -->
-			 <div class="col-md-4 education" data-aos="zoom-in">
-				<div class="skills">
+			 <div class="col-md-4 w3l-left">
+				<div class="Expertise topper">
 					<h3 class="w3l_head two"><i class="fa fa-shield  wthree-title-list" aria-hidden="true"></i>expertise</h3>
 					<div class="skill-agile">
 						<div class='bar_group'>
-							<div class='bar_group__bar thin elastic' label='HTML' value='230'></div>
-							<div class='bar_group__bar thin elastic' label='Css3' value='130'></div>
-							<div class='bar_group__bar thin elastic' label='Php' value='340'></div>
+							<div class='skill' label='HTML' value='230'></div>
+							<div class='skill' label='Css3' value='130'></div>
+							<div class='skill' label='Php' value='340'></div>
 						</div>
 					</div>
 				</div>
-				<div class="education-w3l">
+				<div class="education topper">
 					 <h3 class="w3l_head three"><i class="fa fa-graduation-cap  wthree-title-list" aria-hidden="true"></i>Education</h3>
-					  <div class="education-agile-grids aos-init aos-animate" data-aos="slide-up">
+					  <div class="">
 						  <div class="education-agile-w3l">
 							 <div class="education-agile-w3l-year">
-								   <h4 class="w3ls-uni"><i class="fa fa-caret-right  wthree-title-list" aria-hidden="true"></i>University of Lorem ipsum</h4>
-								   <h4 class="w3layouts-year">2012-2013</h4>
+								   <h4 class="edu-sc"><i class="fa fa-caret-right  wthree-title-list" aria-hidden="true"></i>University of Lorem ipsum</h4>
+								   <h4 class="edu-year">2012-2013</h4>
 								   <div class="clearfix"></div>
 							 </div>
 							 <div class="education-agile-w3l-info">
@@ -54,8 +54,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						  </div>
 						  <div class="education-agile-w3l two">
 							 <div class="education-agile-w3l-year">
-							   <h4 class="w3ls-uni"><i class="fa fa-caret-right  wthree-title-list" aria-hidden="true"></i>University of Lorem ipsum</h4>
-							   <h4 class="w3layouts-year">2009-2012</h4>
+								<h4 class="edu-sc"><i class="fa fa-caret-right  wthree-title-list" aria-hidden="true"></i>University of Lorem ipsum</h4>
+								<h4 class="edu-year">2012-2013</h4>
 							   <div class="clearfix"></div>
 							</div>
 							 <div class="education-agile-w3l-info">
@@ -65,8 +65,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						  </div>
 						  <div class="education-agile-w3l">
 							 <div class="education-agile-w3l-year">
-								<h4 class="w3ls-uni"><i class="fa fa-caret-right  wthree-title-list" aria-hidden="true"></i>University of Lorem ipsum</h4>
-								<h4 class="w3layouts-year">2007-2009</h4>
+								<h4 class="edu-sc"><i class="fa fa-caret-right  wthree-title-list" aria-hidden="true"></i>University of Lorem ipsum</h4>
+								   <h4 class="edu-year">2012-2013</h4>
 								<div class="clearfix"></div>
 							 </div>
 							 <div class="education-agile-w3l-info">
@@ -80,60 +80,56 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			</div>
 			<!-- //education -->
 			<!-- /experience -->
-			<div class="col-md-8  experience" id="education" data-aos="zoom-in">
-				<div class=" skills two">
+			<div class="col-md-7  w3l-right">
+				<div class="profile topper">
 					<h3 class="w3l_head two"><i class="fa fa-file-text-o  wthree-title-list" aria-hidden="true"></i>Profile</h3>
 					 <div class="agileits-skill-agile">
-						<p>Accomplished web designer & front-end developer with extensive experience building WordPress driven websites, HTML5, CSS3 and various web scripting technologies, web standards and project management. Provide a diverse range of services including custom theme/application/plugin development, SEO/SEM, and branding to an array of clients from a variety of industries. Enthusiastic web professional motivated by challenging projects and deadlines.</p>
+						<p>Accomplished web designer & front-end developer with extensive experience building
+							 WordPress driven websites, HTML5, CSS3 and various web scripting technologies,
+							  web standards and project management. Provide a diverse range of services including
+							   custom theme/application/plugin development, SEO/SEM, and branding to an array of
+								clients from a variety of industries. Enthusiastic web professional motivated by
+								 challenging projects and deadlines.</p>
 							<div class="clearfix"></div>
 					 </div>
 				 </div>
-				<div class="education-w3l">
-					<h3 class="w3l_head three"><i class="fa fa-briefcase  wthree-title-list" aria-hidden="true"></i>Experience</h3>
-					<div class="education-agile-grids aos-init aos-animate" data-aos="slide-up">
-					  <div class="education-agile-w3l">
-						 <div class="education-agile-w3l-year">
-							<h4 class="w3ls-uni"><i class="fa fa-caret-right  wthree-title-list" aria-hidden="true"></i>senior interface designer</h4>
-							<h4 class="w3layouts-year">2016-2017</h4>
+				<div class="topper experience">
+					<h3 class="w3l_head"><i class="fa fa-briefcase  wthree-title-list" aria-hidden="true"></i>Experience</h3>
+					<div class="">
+					  <div class="kinhnghiem">
+						 <div class="">
+							<h4 class="kn-job"><i class="fa fa-caret-right  wthree-title-list" aria-hidden="true"></i>senior interface designer</h4>
+							<h4 class="kn-year">2016-2017</h4>
 							<div class="clearfix"></div>
 						 </div>
-						 <div class="education-agile-w3l-info">
+						 <div class="text-kinhnghiem">
 							   <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor.</p>
 						 </div>
-						 <div class="clearfix"></div>
-					  </div>
-					  <div class="education-agile-w3l two">
-						 <div class="education-agile-w3l-year">
-							<h4 class="w3ls-uni"><i class="fa fa-caret-right  wthree-title-list" aria-hidden="true"></i>graphic designer</h4>
-							<h4 class="w3layouts-year">2015-2016</h4>
+						 <div class="">
+							<h4 class="kn-job"><i class="fa fa-caret-right  wthree-title-list" aria-hidden="true"></i>senior interface designer</h4>
+							<h4 class="kn-year">2016-2017</h4>
 							<div class="clearfix"></div>
-						 </div>
-						 <div class="education-agile-w3l-info">
-							  <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor.</p>
-						 </div>
-						  <div class="clearfix"></div>
-					  </div>
-					  <div class="education-agile-w3l">
-						 <div class="education-agile-w3l-year">
-							<h4 class="w3ls-uni"><i class="fa fa-caret-right  wthree-title-list" aria-hidden="true"></i>web designer</h4>
-							<h4 class="w3layouts-year">2014-2015</h4>
-							<div class="clearfix"></div>
-						 </div>
-						 <div class="education-agile-w3l-info">
+						</div>
+						<div class="text-kinhnghiem">
 							<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor.</p>
-						 </div>
-						 <div class="clearfix"></div>
-					  </div>
-					  <div class="education-agile-w3l two">
-						 <div class="education-agile-w3l-year">
-							<h4 class="w3ls-uni"><i class="fa fa-caret-right  wthree-title-list" aria-hidden="true"></i>web developer</h4>
-							<h4 class="w3layouts-year">2013-2014</h4>
-							<div class="clearfix"></div>
-						 </div>
-						 <div class="education-agile-w3l-info">
-							<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor.</p>
-						 </div>
-						 <div class="clearfix"></div>
+						</div>
+						<div class="">
+								<h4 class="kn-job"><i class="fa fa-caret-right  wthree-title-list" aria-hidden="true"></i>senior interface designer</h4>
+								<h4 class="kn-year">2016-2017</h4>
+								<div class="clearfix"></div>
+							 </div>
+							 <div class="text-kinhnghiem">
+								   <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor.</p>
+							 </div>
+							 <div class="">
+								<h4 class="kn-job"><i class="fa fa-caret-right  wthree-title-list" aria-hidden="true"></i>senior interface designer</h4>
+								<h4 class="kn-year">2016-2017</h4>
+								<div class="clearfix"></div>
+							</div>
+							<div class="text-kinhnghiem">
+								<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor.</p>
+							</div>
+						<div class="clearfix"></div>
 					  </div>
 					</div>
 				</div>
