--- a/index.html
+++ b/index.html
@@ -84,12 +84,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<div class="profile topper">
 					<h3 class="w3l_head two"><i class="fa fa-file-text-o  wthree-title-list" aria-hidden="true"></i>Profile</h3>
 					 <div class="agileits-skill-agile">
-						<p>Accomplished web designer & front-end developer with extensive experience building
-							 WordPress driven websites, HTML5, CSS3 and various web scripting technologies,
-							  web standards and project management. Provide a diverse range of services including
-							   custom theme/application/plugin development, SEO/SEM, and branding to an array of
-								clients from a variety of industries. Enthusiastic web professional motivated by
-								 challenging projects and deadlines.</p>
+						<p>Hoàn thành khóa học 3 năm ngành công nghệ phần mềm tại trường Cao Đẳng kỷ thuật Lý Tự Trọng tp.Hồ Chí Minh.
+							được đào tạo căn bản các công nghệ và ngôn ngữ C# Java, HTML, CSS, PHP, SQL Server, My SQL...
+							Trong quá trình làm thực tập sinh và tự học, tìm hiểu về javascript và framework angular.
+							nếu có điều kiện phát triển sẻ tiếp tục tìm hiểu về ngôn ngữ php cho back-end.</p>
 							<div class="clearfix"></div>
 					 </div>
 				 </div>
