--- a/index.html.html
+++ b/index.html.html
@@ -6,6 +6,7 @@
     <link href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css' rel='stylesheet' type='text/css'>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 <div class="container">
     <section id="Profile">
@@ -111,134 +112,4 @@
     </section>
 </div>
 </body>
-<style>
-    html {
-        height: 100%;
-    }
-
-    body {
-        height: 100%;
-        background: #F1E0CD url("https://farm4.staticflickr.com/3895/14744582186_8d5b05578c_k.jpg") no-repeat;
-        color: #404041;
-        background-size: cover;
-        font-family: "Source Sans Pro", sans-serif;
-    }
-    h1,h2,h3,h4,h5,h6 {
-        font-family: "Josefin Sans", sans-serif;
-    }
-
-    p {
-        font-size: 1.75rem;
-    }
-
-    #Profile {
-        margin: 6rem auto 0;
-        background: white;
-        max-width: 80%;
-    }
-
-    #user {
-        padding: 2.5rem;
-    }
-
-    #img {
-        width: 120px;
-        height: 120px;
-        background: #DA609B url("https://scontent.fsgn6-1.fna.fbcdn.net/v/t1.0-1/p160x160/33029261_953577291467035_8611171349852848128_n.jpg?_nc_cat=0&oh=82181f0e96b21b6c8f82a4cf71995eea&oe=5BE19447") top center no-repeat;
-        display: block;
-        margin: 4rem auto 0;
-        border-radius: 50%;
-    }
-
-    #social a {
-        margin: 0 0.5rem;
-    }
-
-    i[class*="2x"] {
-        color: #DA609B;
-    }
-
-    i[class*="1x"] {
-        transition: color 0.5s ease;
-        color: white;
-    }
-
-    i[class*="1x"]:hover {
-        color: #F1E0CD;
-    }
-
-    #navigation ul {
-        background: #DA609B;
-    }
-
-    #navigation ul i {
-        color: #F1E0CD;
-    }
-
-    #navigation ul li.active i {
-        color: #DA609B;
-    }
-
-    #navigation ul li.active:hover i {
-        color: white;
-    }
-
-    .nav-tabs {
-        border: none;
-    }
-
-    .tab-pane {
-        padding: 10% 10% 2%;
-    }
-
-    .nav-tabs.nav-justified>li>a {
-        margin: 0;
-        border: none;
-        border-radius: 0;
-    }
-
-    .nav-tabs.nav-justified>li>a:hover {
-        background: #D88BAC;
-    }
-
-    .progress-bar {
-        background-color: #DA609B;
-    }
-
-    label,
-    input {
-        margin-bottom: 1.25rem;
-    }
-
-    label {
-        font-size: 1.75rem;
-        color: #DA609B;
-    }
-
-    label small {
-        color: #D88BAC;
-        font-size: 1.25rem;
-        margin-left: 0.25rem;
-    }
-
-    .form-control:focus {
-        border-color: #D88BAC;
-        box-shadow: 0 0 0.5rem #D88BAC;
-    }
-
-    button[type="submit"] {
-        margin-top: 2rem;
-        background: #DA609B;
-        border-color: #DA609B;
-        color: white;
-        transition: color 0.5s ease;
-    }
-
-    button[type="submit"]:hover {
-        background: #DA609B;
-        border-color: #DA609B;
-        color: #F1E0CD;
-    }
-</style>
-
 </html>
