--- a/index.html
+++ b/index.html
@@ -53,7 +53,17 @@
                     </li>
                     <li role="presentation">
                         <a href="#skills" role="tab" data-toggle="tab">
-                            <i class="fa fa-trophy fa-3x"></i>
+                            <i class="fa fa-shield fa-3x"></i>
+                        </a>
+                    </li>
+                    <li role="presentation">
+                        <a href="#education" role="tab" data-toggle="tab">
+                            <i class="fa fa-graduation-cap fa-3x"></i>
+                        </a>
+                    </li>
+                    <li role="presentation">
+                        <a href="#info" role="tab" data-toggle="tab">
+                            <i class="fa fa-angellist fa-3x"></i>
                         </a>
                     </li>
                     <li role="presentation">
@@ -64,7 +74,7 @@
                 </ul>
                 <div class="tab-content">
                     <div id="about" role="tabpanel" class="tab-pane fade">
-                        <h3>About Me</h3>
+                        <h2>About Me</h2>
                         <p>Whimsical, original surface and textile patterns designed to make you happy! Garden whimsy, friendly
                             sea creatures and animals, yummy food, dazzling holiday, and loose florals is my specialty. </p>
                         <p>I am a freelance surface pattern designer creating hand-drawn designs with a fresh, modern vibe and
@@ -72,18 +82,26 @@
                             markets.</p>
                     </div>
                     <div id="skills" role="tabpanel" class="tab-pane fade">
-                        <h3>Skills</h3>
+                        <h2>Skills</h2>
                         <h4>Html Css Javascript</h4>
                         <div class="progress">
-                            <div role="progressbar" style="width: 90%;" class="progress-bar">90%</div>
+                            <div role="progressbar" style="width: 80%;" class="progress-bar">80%</div>
                         </div>
-                        <h4>Adobe Photoshop</h4>
+                        <h4>Sql Server</h4>
+                        <div class="progress">
+                            <div role="progressbar" style="width: 60%;" class="progress-bar">60%</div>
+                        </div>
+                        <h4>C# Java</h4>
+                        <div class="progress">
+                            <div role="progressbar" style="width: 50%;" class="progress-bar">50%</div>
+                        </div>
+                        <h4>Photoshop</h4>
                         <div class="progress">
                             <div role="progressbar" style="width: 70%;" class="progress-bar">70%</div>
                         </div>
-                        <h4>Sketch by Bohemian Coding</h4>
+                        <h4>English</h4>
                         <div class="progress">
-                            <div role="progressbar" style="width: 40%;" class="progress-bar">40%</div>
+                            <div role="progressbar" style="width: 60%;" class="progress-bar">60%</div>
                         </div>
                     </div>
                     <div id="contact" role="tabpanel" class="tab-pane fade">
@@ -103,6 +121,46 @@
                                 </label>
                                 <textarea id="text" required="required" placeholder="Type Your Message Here" rows="3" maxlength="280" class="form-control input-lg"></textarea>
                                 <button type="submit" class="btn btn-default btn-lg">Send a Message</button>
+                            </div>
+                        </form>
+                    </div>
+                    <div id="info" role="tabpanel" class="tab-pane fade">
+                        <h2 style="color: rgb(163, 247, 54)">Infomation</h2>
+                        <form>
+                            <div class="form-group">
+                                <div><h4>Full Name</h4></div>
+                                <div><h2>Hồ Thái Quyền</h2></p></div>
+                            </div>
+                            <div class="form-group">
+                                <div><h4>Birth</h4></div>
+                                <div><h2>15/08/1997</h2></p></div>
+                            </div>
+                            <div class="form-group">
+                                <div><h4>numberphone</h4></div>
+                                <div><h2>01633129069</h2></p></div>
+                            </div>
+                            <div class="form-group">
+                                <div><h4>Email</h4></div>
+                                <div><h2>Quyenthaiho@gmail.com</h2></p></div>
+                            </div>
+                            <div class="form-group">
+                                <div><h4>Address</h4></div>
+                                <div><h2>44/43/45 Trần Thái Tong - Quận Tân Bình</h2></p></div>
+                            </div>
+                        </form>
+                    </div>
+                    <div id="education" role="tabpanel" class="tab-pane fade">
+                        <h2>Education</h2>
+                        <form>
+                            <div class="form-group">
+                                <div class="edu">
+                                    <p class="year">2015 - 2018</p>
+                                    <h3>Cao Đẳng Lý Tự Trọng</h3>
+                                    <p>Học và tốt nghiệp cao đẳng Lý Tự Trọng với chuyên ngành Công nghệ phần mềm. Được đào tạo căn bản các ngôn ngữ và công nghệ:
+                                        Sql server, C#, Java, Html, css...
+                                    </p>
+                                </div>
+                            </div>
                             </div>
                         </form>
                     </div>
