--- a/index.html
+++ b/index.html
@@ -17,12 +17,6 @@
                 <h4>front-end Developer</h4>
             </div>
             <div id="social">
-                <!-- <a href="#">
-                    <span class="fa-stack fa-lg">
-                        <i class="fa fa-circle fa-stack-2x"></i>
-                        <i class="fa fa-twitter fa-stack-1x"></i>
-                    </span>
-                </a> -->
                 <a href="https://www.facebook.com/thaiquyen.ho">
                     <span class="fa-stack fa-lg">
                         <i class="fa fa-circle fa-stack-2x"></i>
@@ -32,13 +26,13 @@
                 <a href="#">
                     <span class="fa-stack fa-lg">
                         <i class="fa fa-circle fa-stack-2x"></i>
-                        <i class="fa fa-dribbble fa-stack-1x"></i>
+                        <i class="fa fa-skype fa-stack-1x"></i>
                     </span>
                 </a>
                 <a href="#">
                     <span class="fa-stack fa-lg">
                         <i class="fa fa-circle fa-stack-2x"></i>
-                        <i class="fa fa-behance fa-stack-1x"></i>
+                        <i class="fa fa-github-alt fa-stack-1x"></i>
                     </span>
                 </a>
             </div>
@@ -63,29 +57,27 @@
                     </li>
                     <li role="presentation">
                         <a href="#info" role="tab" data-toggle="tab">
-                            <i class="fa fa-angellist fa-3x"></i>
-                        </a>
-                    </li>
-                    <li role="presentation">
-                        <a href="#contact" role="tab" data-toggle="tab">
-                            <i class="fa fa-envelope-o fa-3x"></i>
+                            <i class="fa fa-info fa-3x"></i>
                         </a>
                     </li>
                 </ul>
                 <div class="tab-content">
                     <div id="about" role="tabpanel" class="tab-pane fade">
                         <h2>About Me</h2>
-                        <p>Whimsical, original surface and textile patterns designed to make you happy! Garden whimsy, friendly
-                            sea creatures and animals, yummy food, dazzling holiday, and loose florals is my specialty. </p>
-                        <p>I am a freelance surface pattern designer creating hand-drawn designs with a fresh, modern vibe and
-                            sophisticated color palette for use in home decor, stationery, apparel, and a variety of other
-                            markets.</p>
+                        <p>Hoàn thành khóa học 3 năm ngành công nghệ phần mềm tại trường Cao Đẳng kỷ thuật Lý Tự Trọng tp.Hồ Chí Minh.
+							được đào tạo căn bản các công nghệ và ngôn ngữ C# Java, HTML, CSS, PHP, SQL Server, My SQL...
+							Trong quá trình làm thực tập sinh và tự học, tìm hiểu về javascript và framework angular.
+							nếu có điều kiện phát triển sẻ tiếp tục tìm hiểu về ngôn ngữ php cho back-end</p>
                     </div>
                     <div id="skills" role="tabpanel" class="tab-pane fade">
                         <h2>Skills</h2>
-                        <h4>Html Css Javascript</h4>
+                        <h4>Html Css</h4>
                         <div class="progress">
                             <div role="progressbar" style="width: 80%;" class="progress-bar">80%</div>
+                        </div>
+                        <h4>Javascript Php</h4>
+                        <div class="progress">
+                            <div role="progressbar" style="width: 70%;" class="progress-bar">70%</div>
                         </div>
                         <h4>Sql Server</h4>
                         <div class="progress">
@@ -103,26 +95,6 @@
                         <div class="progress">
                             <div role="progressbar" style="width: 60%;" class="progress-bar">60%</div>
                         </div>
-                    </div>
-                    <div id="contact" role="tabpanel" class="tab-pane fade">
-                        <h3>Contact Me</h3>
-                        <form>
-                            <div class="form-group">
-                                <label for="nameMessage">Name
-                                    <small>Required</small>
-                                </label>
-                                <input id="nameMessage" required="required" type="text" placeholder="Your Name" class="form-control input-lg" />
-                                <label for="email">Email
-                                    <small>Required</small>
-                                </label>
-                                <input id="email" required="required" type="email" placeholder="Email Address" class="form-control input-lg" />
-                                <label for="text">Message
-                                    <small>Required | 280 Character Limit</small>
-                                </label>
-                                <textarea id="text" required="required" placeholder="Type Your Message Here" rows="3" maxlength="280" class="form-control input-lg"></textarea>
-                                <button type="submit" class="btn btn-default btn-lg">Send a Message</button>
-                            </div>
-                        </form>
                     </div>
                     <div id="info" role="tabpanel" class="tab-pane fade">
                         <h2 style="color: rgb(163, 247, 54)">Infomation</h2>
