--- a/index.html
+++ b/index.html
@@ -66,14 +66,14 @@
                 </ul>
                 <div class="tab-content">
                     <div id="about" role="tabpanel" class="tab-pane fade">
-                        <h2>About Me</h2>
+                        <h2>{{thongtin.Aboutme}}</h2>
                         <p>Hoàn thành khóa học 3 năm ngành công nghệ phần mềm tại trường Cao Đẳng kỷ thuật Lý Tự Trọng tp.Hồ Chí Minh.
 							được đào tạo căn bản các công nghệ và ngôn ngữ C# Java, HTML, CSS, PHP, SQL Server, My SQL...
 							Trong quá trình làm thực tập sinh và tự học, tìm hiểu về javascript và framework angular.
 							nếu có điều kiện phát triển sẻ tiếp tục tìm hiểu về ngôn ngữ php cho back-end</p>
                     </div>
                     <div id="skills" role="tabpanel" class="tab-pane fade">
-                        <h2>Skills</h2>
+                        <h2>{{thongtin.Skill}}</h2>
                         <h4>Html Css</h4>
                         <div class="progress">
                             <div role="progressbar" style="width: 80%;" class="progress-bar">80%</div>
@@ -100,7 +100,7 @@
                         </div>
                     </div>
                     <div id="info" role="tabpanel" class="tab-pane fade">
-                        <h2 style="color: rgb(163, 247, 54)">Infomation</h2>
+                        <h2 style="color: rgb(163, 247, 54)">{{thongtin.Infomation}}</h2>
                         <form>
                             <div class="form-group">
                                 <div><h4>Full Name</h4></div>
@@ -125,7 +125,7 @@
                         </form>
                     </div>
                     <div id="education" role="tabpanel" class="tab-pane fade">
-                        <h2>Education</h2>
+                        <h2>{{thongtin.Education}}</h2>
                         <form>
                             <div class="form-group">
                                 <div class="edu">
