--- a/index.html
+++ b/index.html
@@ -103,19 +103,19 @@
                         <h2 style="color: rgb(163, 247, 54)">{{thongtin.Infomation}}</h2>
                         <form>
                             <div class="form-group">
-                                <div><h4>Full Name</h4></div>
+                                <div><h4>{{thongtin.Fullname}}</h4></div>
                                 <div><h2>Hồ Thái Quyền</h2></p></div>
                             </div>
                             <div class="form-group">
-                                <div><h4>Birth</h4></div>
+                                <div><h4>{{Birth}}</h4></div>
                                 <div><h2>15/08/1997</h2></p></div>
                             </div>
                             <div class="form-group">
-                                <div><h4>numberphone</h4></div>
+                                <div><h4>{{Numberphone}}</h4></div>
                                 <div><h2>01633129069</h2></p></div>
                             </div>
                             <div class="form-group">
-                                <div><h4>Email</h4></div>
+                                <div><h4>Emailaddress</h4></div>
                                 <div><h2>Quyenthaiho@gmail.com</h2></p></div>
                             </div>
                             <div class="form-group">
