--- a/index.html
+++ b/index.html
@@ -107,19 +107,19 @@
                                 <div><h2>Hồ Thái Quyền</h2></p></div>
                             </div>
                             <div class="form-group">
-                                <div><h4>{{Birth}}</h4></div>
+                                <div><h4>{{thongtin.Birth}}</h4></div>
                                 <div><h2>15/08/1997</h2></p></div>
                             </div>
                             <div class="form-group">
-                                <div><h4>{{Numberphone}}</h4></div>
+                                <div><h4>{{thongtin.Numberphone}}</h4></div>
                                 <div><h2>01633129069</h2></p></div>
                             </div>
                             <div class="form-group">
-                                <div><h4>Emailaddress</h4></div>
+                                <div><h4>{{thongtin.Emailaddress}}</h4></div>
                                 <div><h2>Quyenthaiho@gmail.com</h2></p></div>
                             </div>
                             <div class="form-group">
-                                <div><h4>Address</h4></div>
+                                <div><h4>{{thongtin.Address}}</h4></div>
                                 <div><h2>44/43/45 Trần Thái Tong - Quận Tân Bình</h2></p></div>
                             </div>
                         </form>
