--- a/index.html
+++ b/index.html
@@ -67,60 +67,23 @@
                 <div class="tab-content">
                     <div id="about" role="tabpanel" class="tab-pane fade">
                         <h2>{{thongtin.Aboutme}}</h2>
-                        <p>Hoàn thành khóa học 3 năm ngành công nghệ phần mềm tại trường Cao Đẳng kỷ thuật Lý Tự Trọng tp.Hồ Chí Minh.
-							được đào tạo căn bản các công nghệ và ngôn ngữ C# Java, HTML, CSS, PHP, SQL Server, My SQL...
-							Trong quá trình làm thực tập sinh và tự học, tìm hiểu về javascript và framework angular.
-							nếu có điều kiện phát triển sẻ tiếp tục tìm hiểu về ngôn ngữ php cho back-end</p>
+                        <p>{{about}}</p>
                     </div>
                     <div id="skills" role="tabpanel" class="tab-pane fade">
                         <h2>{{thongtin.Skill}}</h2>
-                        <h4>Html Css</h4>
-                        <div class="progress">
-                            <div role="progressbar" style="width: 80%;" class="progress-bar">80%</div>
-                        </div>
-                        <h4>Javascript Php</h4>
-                        <div class="progress">
-                            <div role="progressbar" style="width: 70%;" class="progress-bar">70%</div>
-                        </div>
-                        <h4>Sql Server</h4>
-                        <div class="progress">
-                            <div role="progressbar" style="width: 60%;" class="progress-bar">60%</div>
-                        </div>
-                        <h4>C# Java</h4>
-                        <div class="progress">
-                            <div role="progressbar" style="width: 50%;" class="progress-bar">50%</div>
-                        </div>
-                        <h4>Photoshop</h4>
-                        <div class="progress">
-                            <div role="progressbar" style="width: 70%;" class="progress-bar">70%</div>
-                        </div>
-                        <h4>English</h4>
-                        <div class="progress">
-                            <div role="progressbar" style="width: 60%;" class="progress-bar">60%</div>
+                        <div ng-repeat="(key, value) in skill" >
+                            <h4>{{value.name}}</h4>
+                            <div class="progress">
+                                <div role="progressbar" style="width: 70%" class="progress-bar">{{value.record}}%</div>
+                            </div>
                         </div>
                     </div>
                     <div id="info" role="tabpanel" class="tab-pane fade">
                         <h2 style="color: rgb(163, 247, 54)">{{thongtin.Infomation}}</h2>
                         <form>
-                            <div class="form-group">
-                                <div><h4>{{thongtin.Fullname}}</h4></div>
-                                <div><h2>Hồ Thái Quyền</h2></p></div>
-                            </div>
-                            <div class="form-group">
-                                <div><h4>{{thongtin.Birth}}</h4></div>
-                                <div><h2>15/08/1997</h2></p></div>
-                            </div>
-                            <div class="form-group">
-                                <div><h4>{{thongtin.Numberphone}}</h4></div>
-                                <div><h2>01633129069</h2></p></div>
-                            </div>
-                            <div class="form-group">
-                                <div><h4>{{thongtin.Emailaddress}}</h4></div>
-                                <div><h2>Quyenthaiho@gmail.com</h2></p></div>
-                            </div>
-                            <div class="form-group">
-                                <div><h4>{{thongtin.Address}}</h4></div>
-                                <div><h2>44/43/45 Trần Thái Tong - Quận Tân Bình</h2></p></div>
+                            <div ng-repeat="(key, value) in info" class="form-group">
+                                <div><h4>{{value.name}}</h4></div>
+                                <div><h2>{{value.content}}</h2></p></div>
                             </div>
                         </form>
                     </div>
@@ -128,9 +91,9 @@
                         <h2>{{thongtin.Education}}</h2>
                         <form>
                             <div class="form-group">
-                                <div class="edu">
-                                    <p class="year">2015 - 2018</p>
-                                    <h3>Cao Đẳng Lý Tự Trọng</h3>
+                                <div ng-repeat="(key, value) in edu" class="edu">
+                                    <p class="year">{{value.year}}</p>
+                                    <h3>{{value.name}}</h3>
                                     <p>Học và tốt nghiệp cao đẳng Lý Tự Trọng với chuyên ngành Công nghệ phần mềm. Được đào tạo căn bản các ngôn ngữ và công nghệ:
                                         Sql server, C#, Java, Html, css...
                                     </p>
