--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
         <div id="user" class="text-center">
             <div id="img"></div>
             <div id="name">
-                <h1>Hồ thái Quyền</h1>
-                <h4>front-end Developer</h4>
+                <h1>{{thongtin.name}}</h1>
+                <h4>{{thongtin.specialized}}</h4>
             </div>
             <div id="social">
                 <a href="https://www.facebook.com/thaiquyen.ho">
