--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
 <div class="container" ng-app="myApp" ng-controller="myCtrl" >
     <section id="Profile">
         <div id="user" class="text-center">
+            <div class="language" >
+                <div class="eng"><button class="btneng" ng-click="english()" ></button></div>
+                <div class="vi"><button class="btnvi" ng-click="Vietnamese()" ></button></div>
+            </div>
             <div id="img"></div>
             <div id="name">
                 <h1>{{thongtin.name}}</h1>
