--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <section id="Profile">
         <div id="user" class="text-center">
             <div class="language" >
-                <div class="eng"><button class="btneng" ng-click="change(1)" ></button></div>
-                <div class="vi"><button class="btnvi" ng-click="change(0)" ></button></div>
+                <div class="eng"><button class="btneng" ng-click="change('Eng')" ></button></div>
+                <div class="vi"><button class="btnvi" ng-click="change('Vi')" ></button></div>
             </div>
             <div id="img"></div>
             <div id="name">
