--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             </div>
         </div>
         <div id="content">
-            <div id="navigation">
+            <div id="navigation" ng-click="viewInfoAction()">
                 <ul role="tablist" class="nav nav-tabs nav-justified">
                     <li role="presentation">
                         <a href="#about" role="tab" data-toggle="tab">
