--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                         <i class="fa fa-skype fa-stack-1x"></i>
                     </span>
                 </a>
-                <a href="#">
+                <a href="#https://github.com/cnysa/profile">
                     <span class="fa-stack fa-lg">
                         <i class="fa fa-circle fa-stack-2x"></i>
                         <i class="fa fa-github-alt fa-stack-1x"></i>
@@ -55,6 +55,11 @@
                         </a>
                     </li>
                     <li role="presentation">
+                        <a href="#info" role="tab" data-toggle="tab">
+                            <i class="fa fa-info fa-3x"></i>
+                        </a>
+                    </li>
+                    <li role="presentation">
                         <a href="#skills" role="tab" data-toggle="tab">
                             <i class="fa fa-shield fa-3x"></i>
                         </a>
@@ -65,8 +70,8 @@
                         </a>
                     </li>
                     <li role="presentation">
-                        <a href="#info" role="tab" data-toggle="tab">
-                            <i class="fa fa-info fa-3x"></i>
+                        <a href="#experience" role="tab" data-toggle="tab">
+                            <i class="fa fa-archive fa-3x" ></i>
                         </a>
                     </li>
                 </ul>
@@ -103,6 +108,18 @@
                                     <p>Học và tốt nghiệp cao đẳng Lý Tự Trọng với chuyên ngành Công nghệ phần mềm. Được đào tạo căn bản các ngôn ngữ và công nghệ:
                                         Sql server, C#, Java, Html, css...
                                     </p>
+                                </div>
+                            </div>
+                            </div>
+                        </form>
+                    </div>
+                    <div id="experience" role="tabpanel" class="tab-pane fade">
+                        <h2>{{thongtin.Experience}}</h2>
+                        <form>
+                            <div class="form-group">
+                                <div ng-repeat="(key, value) in exp" class="edu">
+                                    <h3>{{value.tech}}</h3>
+                                    <p>{{value.name}}</p>
                                 </div>
                             </div>
                             </div>
