--- a/index.html
+++ b/index.html
@@ -105,11 +105,8 @@
                                 <div ng-repeat="(key, value) in edu" class="edu">
                                     <p class="year">{{value.year}}</p>
                                     <h3>{{value.name}}</h3>
-                                    <p>Học và tốt nghiệp cao đẳng Lý Tự Trọng với chuyên ngành Công nghệ phần mềm. Được đào tạo căn bản các ngôn ngữ và công nghệ:
-                                        Sql server, C#, Java, Html, css...
-                                    </p>
+                                    <p>{{value.content}}</p>
                                 </div>
-                            </div>
                             </div>
                         </form>
                     </div>
@@ -118,10 +115,10 @@
                         <form>
                             <div class="form-group">
                                 <div ng-repeat="(key, value) in exp" class="edu">
+                                    <p class="year">{{value.year}}</p>
                                     <h3>{{value.tech}}</h3>
                                     <p>{{value.name}}</p>
                                 </div>
-                            </div>
                             </div>
                         </form>
                     </div>
