--- a/index.html
+++ b/index.html
@@ -116,8 +116,8 @@
                             <div class="form-group">
                                 <div ng-repeat="(key, value) in exp" class="edu">
                                     <p class="year">{{value.year}}</p>
-                                    <h3>{{value.tech}}</h3>
-                                    <p>{{value.name}}</p>
+                                    <h3>{{value.name}}</h3>
+                                    <p>{{thongtin.use}}:{{value.tech}}</p>
                                 </div>
                             </div>
                         </form>
