--- a/index.html
+++ b/index.html
@@ -115,9 +115,9 @@
                         <form>
                             <div class="form-group">
                                 <div ng-repeat="(key, value) in exp" class="edu">
-                                    <p class="year">{{value.year}}</p>
                                     <h3>{{value.name}}</h3>
-                                    <p>{{thongtin.use}}:{{value.tech}}</p>
+                                    <p style="color: green">{{thongtin.use}}:{{value.tech}}</p>
+                                    <p>{{value.content}}</p>
                                 </div>
                             </div>
                         </form>
