--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <html>
 
 <head>
+    <link rel="shortcut icon" href="favicon.ico" />
+    <title>
+            Ho Thai Quyen
+    </title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
     <link href='https://fonts.googleapis.com/css?family=Josefin+Sans:600|Source+Sans+Pro' rel='stylesheet' type='text/css'>
@@ -12,6 +16,7 @@
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.7.2/angular.min.js"></script>
     <script type="text/javascript" src="./assets/js/app.js"></script>
     <link href="assets/css/style.css" rel="stylesheet" type="text/css" />
+    
 </head>
 <div class="container" ng-app="myApp" ng-controller="myCtrl" >
     <section id="Profile">
@@ -32,13 +37,13 @@
                         <i class="fa fa-facebook-f fa-stack-1x"></i>
                     </span>
                 </a>
-                <a href="#">
+                <a href="skype:live:e9dc0894b15b0085?call"></a>
                     <span class="fa-stack fa-lg">
                         <i class="fa fa-circle fa-stack-2x"></i>
                         <i class="fa fa-skype fa-stack-1x"></i>
                     </span>
                 </a>
-                <a href="#https://github.com/cnysa/profile">
+                <a href="https://github.com/cnysa/profile">
                     <span class="fa-stack fa-lg">
                         <i class="fa fa-circle fa-stack-2x"></i>
                         <i class="fa fa-github-alt fa-stack-1x"></i>
