--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <section id="Profile">
         <div id="user" class="text-center">
             <div class="language" >
+                <label>{{}}</label>
                 <div class="eng"><button class="btneng" ng-click="change('Eng')" ></button></div>
                 <div class="vi"><button class="btnvi" ng-click="change('Vi')" ></button></div>
             </div>
@@ -30,6 +31,7 @@
                 <h1>{{thongtin.name}}</h1>
                 <h4>{{thongtin.specialized}}</h4>
             </div>
+            <div><a href="https://cnysa.github.io/profile/assets/data/cv/HothaiQuyen-cv.dbf" class="btn btn-lg btn-primary"><span class="glyphicon glyphicon-cloud-download"></span> Download DBF CV</a></div>
             <div id="social">
                 <a href="https://www.facebook.com/thaiquyen.ho">
                     <span class="fa-stack fa-lg">
@@ -43,7 +45,7 @@
                         <i class="fa fa-skype fa-stack-1x"></i>
                     </span>
                 </a>
-                <a href="https://github.com/cnysa/profile">
+                <a href="https://github.com/cnysa/profile">&nbsp;
                     <span class="fa-stack fa-lg">
                         <i class="fa fa-circle fa-stack-2x"></i>
                         <i class="fa fa-github-alt fa-stack-1x"></i>
